--- a/listaFuncoes/ex5.html
+++ b/listaFuncoes/ex5.html
@@ -7,9 +7,9 @@
     <script src="js/ex5.js"></script>
   </head>
   <body>
-    <label for="numero">Digite um numero: </label>
-    <input type="number" name="numero" id="numero" />
-    <button onclick="exibeResultado()">Inverter</button>
+    <label for="texto">Digite uma palavra ou frase: </label>
+    <input type="text" name="texto" id="texto" />
+    <button onclick="pegarPalavra()">Contar vogais</button>
     <p id="resultado"></p>
   </body>
 </html>
