--- a/listaFuncoes/ex2.html
+++ b/listaFuncoes/ex2.html
@@ -7,9 +7,14 @@
     <script src="js/ex2.js"></script>
   </head>
   <body>
-    <label for="texto">Digite um texto: </label>
-    <input type="text" name="texto" id="texto" />
-    <button onclick="transformar()">Transformar em maiúsculas</button>
+    <label for="num">Digite um número: </label>
+    <input type="number" name="num" id="num" />
+    <label for="operacoes">Escolha uma operação: </label>
+    <select name="operacoes" id="operacoes">
+      <option value="raiz">Raiz</option>
+      <option value="exponencial">Exponencial</option>
+    </select>
+    <button onclick="raizEexponencial()">Ver o resultado</button>
     <p id="resultado"></p>
   </body>
 </html>
