--- a/listaFuncoes/ex2.html
+++ b/listaFuncoes/ex2.html
@@ -7,8 +7,8 @@
     <script src="js/ex2.js"></script>
   </head>
   <body>
-    <label for="num">Digite um número: </label>
-    <input type="number" name="num" id="num" />
+    <label for="numero">Digite um número: </label>
+    <input type="number" name="numero" id="numero" />
     <label for="operacoes">Escolha uma operação: </label>
     <select name="operacoes" id="operacoes">
       <option value="raiz">Raiz</option>
