--- a/listaFuncoesSeta/ex1.html
+++ b/listaFuncoesSeta/ex1.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="js/ex1.js" defer></script>
   </head>
   <body>
+    <label for="nome">Nome: </label>
+    <input type="text" name="nome" id="nome">
+    <label for="mensagem">Mensagem: </label>
+    <input type="text" name="mensagem" id="mensagem">
+    <Button id="exibirBtn">Exibir Saudacao</Button>
     <p id="resultado"></p>
-
-    <script src="js/ex1.js"></script>
   </body>
 </html>
