--- a/listaFuncoesSeta/ex6.html
+++ b/listaFuncoesSeta/ex6.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="js/ex2.js" defer></script>
+    <script src="js/ex6.js" defer></script>
   </head>
   <body>
-    <label for="preco">Preço: </label>
-    <input type="number" name="preco" id="preco" />
-    <label for="desconto">Desconto: </label>
-    <input type="number" id="desconto" />
+    <label for="valor">Digite o valor da compra: </label>
+    <input type="number" name="valor" id="valor" />
+    <label for="imposto">Digite a porcentagem de imposto: </label>
+    <input type="number" name="imposto" id="imposto" />
     <button id="exibirBtn">Exibir total</button>
     <p id="resultado"></p>
   </body>
 </html>
+
