--- a/listaFuncoesSeta/ex4.html
+++ b/listaFuncoesSeta/ex4.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="js/ex4.js" defer></script>
   </head>
   <body>
+    <label for="numero">Digite um número: </label>
+    <input type="number" id="numero" />
+    <button id="exibirBtn">Quadrado do número</button>
     <p id="resultado"></p>
-    <script src="js/ex4.js"></script>
   </body>
 </html>
