--- a/listaFuncoesSeta/ex7.html
+++ b/listaFuncoesSeta/ex7.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="js/ex3.js" defer></script>
+    <script src="js/ex7.js" defer></script>
   </head>
   <body>
     <label for="numero">Digite um número: </label>
-    <input type="number" id="numero" />
-    <button id="exibirBtn">Verificar o numero</button>
+    <input type="number" name="numero" id="numero" />
+    <button id="exibirBtn">Fatorial</button>
     <p id="resultado"></p>
   </body>
 </html>
