--- a/listaRepeticao/ex2.html
+++ b/listaRepeticao/ex2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="js/ex2.js"></script>
+    <script src="js/ex2.js" defer></script>
   </head>
   <body>
     <label for="numero">Forneça um número(Digite -1 para parar): </label>
