--- a/listaRepeticao/ex7.html
+++ b/listaRepeticao/ex7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/ex7.js"></script>
+    <script src="js/ex7.js" defer></script>
 </head>
 <body>
     <label for="numero">Forneça um numero: </label>
