--- a/listaVetores/ex1/index.html
+++ b/listaVetores/ex1/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <label for="tarefa">Tarefa: </label>
-    <input type="text" id="tarefa" placeholder="Informe uma tarefa" />
+    <input type="text" id="tarefa" placeholder="Informe uma tarefa: " />
     <button id="cadastrarTarefaBtn">Cadastrar</button>
     <button id="removerTarefaBtn">Remover Último</button>
+    <br>
+    <label for="tarefaRemovida">Tarefa:</label>
+    <input type="text" id="tarefaRemovida" placeholder="Informe a tarefa que deseja remover: " />
+    <button id="removerTarefaEscolhidaBtn">Remover</button>
     <p id="resultado"></p>
   </body>
 </html>
