--- a/listaVetores/ex4/index.html
+++ b/listaVetores/ex4/index.html
@@ -6,15 +6,13 @@
     <script src="js/script.js" defer></script>
     <title>Gerenciador de Tarefas</title>
   </head>
-  <body>
     <label for="tarefa">Tarefa: </label>
     <input type="text" id="tarefa" placeholder="Informe uma tarefa: " />
     <button id="cadastrarTarefaBtn">Cadastrar</button>
     <button id="removerTarefaBtn">Remover Último</button>
     <br>
-    <label for="tarefaRemovida">Tarefa:</label>
-    <input type="text" id="tarefaRemovida" placeholder="Informe a tarefa que deseja remover: " />
     <button id="removerTarefaEscolhidaBtn">Remover</button>
-    <p id="resultado"></p>
+    <br>
+    <div id="resultado"></div>
   </body>
 </html>
