--- a/listaVetores/ex5/index.html
+++ b/listaVetores/ex5/index.html
@@ -10,7 +10,7 @@
     <select name="frutas" id="frutas">
         <option value="Abacate">Abacate</option>
         <option value="Pera">Pera</option>
-        <option value="Maçã">Maçã</option>
+        <option value="Maca">Maçã</option>
         <option value="Laranja">Laranja</option>
     </select>
     <button id="frutaBtn">Escolher</button>
