--- a/listaVetores/ex5/index.html
+++ b/listaVetores/ex5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/script.js" defer></script>
-    <title>Gerenciador de Tarefas</title>
+    <title>frutas</title>
   </head>
     <label for="frutas">Escolha uma fruta: </label>
     <select name="frutas" id="frutas">
