--- a/POO/ex1/index.html
+++ b/POO/ex1/index.html
@@ -8,18 +8,15 @@
 </head>
 <body>
     <label for="nome">Nome do Aluno:</label>
-    <input type="text" id="nome" />
+    <input type="text" id="nome" placeholder="Informe o nome do aluno"/>
 
-    <label for="nota1">Primeira Nota:</label>
-    <input type="number" id="nota1" />
+    <label for="nota">Primeira Nota:</label>
+    <input type="number" id="nota" placeholder="Informe a nota"/>
 
-    <label for="nota2">Segunda Nota:</label>
-    <input type="number" id="nota2" />
-
-    <label for="nota3">Terceira Nota:</label>
-    <input type="number" id="nota3" />
-
+    <button id="botaoAdicionarNota">Adicionar nota</button>
     <button id="botaoMedia">Calcular Média</button>
+    <button id="botaoLimparNota">Limpar nota</button>
+    <p id="notasAdicionadas"></p>
     <p id="resultado"></p>
 </body>
 </html>
