--- a/POO/ex1/index.html
+++ b/POO/ex1/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/Principal.js"></script>
-</head>
-<body>
-    <label for="nome">Nome do Aluno:</label>
-    <input type="text" id="nome" placeholder="Informe o nome do aluno"/>
-
-    <label for="nota">Primeira Nota:</label>
-    <input type="number" id="nota" placeholder="Informe a nota"/>
-
-    <button id="botaoAdicionarNota">Adicionar nota</button>
-    <button id="botaoMedia">Calcular Média</button>
-    <button id="botaoLimparNota">Limpar nota</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- script type="module" src="js/GerenciadorDeAlunos.js" defer></script -->
+    <script type="module" src="js/script.js" defer></script>
+  </head>
+  <body>
+    <label for="nome">Nome: </label>
+    <input type="text" id="nome" />
+    <br />
+    <label for="nota">Nota: </label>
+    <input type="number" id="nota" />
+    <button id="adicionarNotaBtn">Adicionar Nota</button>
+    <button id="calcularMediaBtn">Calcular Média</button>
+    <button id="limparConteudoBtn">Limpar Conteúdo</button>
     <p id="notasAdicionadas"></p>
     <p id="resultado"></p>
-</body>
+  </body>
 </html>
