--- a/listaVetores/ex4/index.html
+++ b/listaVetores/ex4/index.html
@@ -13,6 +13,7 @@
     <br>
     <button id="removerTarefaEscolhidaBtn">Remover</button>
     <br>
-    <div id="resultado"></div>
+    <ul id="resultado"></ul>
+    <!--div id="resultado"></div-->
   </body>
 </html>
