--- a/POO/ex2/index.html
+++ b/POO/ex2/index.html
@@ -69,6 +69,13 @@
         <button id="RemoverQuantidade">Remover Quantidade</button>
     </div>
 
+    <h2>Remover Produto</h2>
+    <div class="form-group">
+        <label for="nomeRemover">Nome do Produto:</label>
+        <input type="text" id="nomeRemover">
+        <button id="removerProduto">Remover produto</button>
+    </div>
+
     <div id="estoqueLista">
         <h3>Lista de Produtos</h3>
         <div id="produtos"></div>
