--- a/POO/ex2/index.html
+++ b/POO/ex2/index.html
@@ -42,6 +42,9 @@
             padding: 10px;
             border-bottom: 1px solid #eee;
         }
+        #totalEstoque {
+            font-size: larger;
+        }
     </style>
     <script type="module" src="js/GerenciadorDeProdutos.js"></script>
 </head>
