Falta exercicios na poo, matriz e excecoes

--- a/POO/ex2/index.html
+++ b/POO/ex2/index.html
@@ -46,7 +46,7 @@
             font-size: larger;
         }
     </style>
-    <script type="module" src="js/GerenciadorDeProdutos.js"></script>
+    <script type="module" src="js/GerenciadorDeProdutos.js" defer></script>
 </head>
 <body>
     <h1>Gerenciador de Estoque</h1>
