--- a/POO/ex3/index.html
+++ b/POO/ex3/index.html
@@ -126,7 +126,7 @@
             }
         }
     </style>
-    <script type="module" src="js/GerenciamentoPedido.js"></script>
+    <script type="module" src="js/GerenciamentoPedido.js" defer></script>
 </head>
 <body>
     <h2>Adicionar ao pedido:</h2>
