--- a/POO/ex4/index.html
+++ b/POO/ex4/index.html
@@ -123,7 +123,7 @@
             font-size: large;
         }
     </style>
-    <script type="module" src="js/GerenciadorEstacionamento.js"></script>
+    <script type="module" src="js/GerenciadorEstacionamento.js" defer></script>
 </head>
 <body>
     <h2>Registrar veículos:</h2>
