--- a/lista2/ex4.html
+++ b/lista2/ex4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/ex4.js"></script>
+    <script src="js/ex4.js" defer></script>
 </head>
 <body>
     <label for="lado1">Digite o primeiro lado do triângulo: </label>
