--- a/listaFuncoes/ex5.html
+++ b/listaFuncoes/ex5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="js/ex5.js"></script>
+    <script src="js/ex5.js" defer></script>
   </head>
   <body>
     <label for="texto">Digite uma palavra ou frase: </label>
