--- a/listaMatriz/ex1/index.html
+++ b/listaMatriz/ex1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriz Randômica</title>
-    <script src="js/ex1.js"></script>
+    <script src="js/ex1.js" defer></script>
 </head>
 <body>
     <h2>Gerador de Matriz Randômica</h2>
